tests/baselines/reference/contextualTyping41.errors.txt
tests/cases/compiler/contextualTyping41.ts(1,11): error TS2352: Type '() => 文字' cannot be converted to type '{ (): 数字; (i: 数字): 数字; }'.
  Type '文字' is not comparable to type '数字'.


==== tests/cases/compiler/contextualTyping41.ts (1 errors) ====
    var foo = <{():number; (i:number):number; }> (function(){return "err";});
              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2352: Type '() => 文字' cannot be converted to type '{ (): 数字; (i: 数字): 数字; }'.
!!! error TS2352:   Type '文字' is not comparable to type '数字'.